--- a/debugger.html
+++ b/debugger.html
@@ -1,10 +1,15 @@
-<p>P</p>
-<span>Span</span> <span>Span</span>
+
 <div>Div</div>
-<style>
-span {
-  display: inline;
-  width: 80px;
-  
-}
-</style>
+<script
+  src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous">
+</script>
+<script>
+  function cois(eleme) {
+    const $eleme = $(eleme) 
+    return $eleme
+  }
+
+  console.log( cois('div'))
+</script>
