--- a/jquery/index.html
+++ b/jquery/index.html
@@ -20,9 +20,11 @@
                 <a href="modificandoHTML1.html">Modificando HTML #01</a>
                 <a href="modificandoHTML2.html">Modificando HTML #02</a>
                 <a href="modificandoHTML3.html">Modificando HTML #03</a>
-                <a href="manipulandoAtributos.html">Manipulando Atributos</a>
+                <a href="manipulandoAtributos1.html">Manipulando Atributos 1</a>
+                <a href="manipulandoAtributos2.html">Manipulando Atributos 2</a>
             </nav>
             <nav>
+                <a href="#">---- </a>
                 <a href="manipulandoCSS.html">Manipulando CSS</a>
                 <a href="eventos1.html">Eventos #01</a>
                 <a href="eventos2.html">Eventos #02</a>
